--- a/JavaScript/Sixth.html
+++ b/JavaScript/Sixth.html
@@ -9,7 +9,7 @@
     <h1>javascript</h1>
     <script>
      let f_name=prompt("Enter First Name");
-     let l_name=prompt("Enter Second NAme");//Prompt is used to take the input from the user
+     let l_name=prompt("Enter Second Name");//Prompt is used to take the input from the user
      document.write( "Hello "+ f_name +" "+ l_name)  
     </script>
 </body>
