Updated Table Roi

--- a/JavaScript/Table_RateOfInterest.html
+++ b/JavaScript/Table_RateOfInterest.html
@@ -1,32 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        table{
+        table {
             border: 2px solid red;
         }
-        td{
+
+        td {
             text-align: center;
-            border: 1px solid rgb(167, 17, 145);;
+            border: 1px solid rgb(167, 17, 145);
+            ;
             width: 150px;
             height: 5px;
             margin: auto;
         }
     </style>
 </head>
+
 <body>
-    <h1>javascript</h1>
+    <h1 align="center">Simple Interest</h1>
     <script>
      let pamt=prompt("Enter the principal amount");
      let roi=prompt("Enter the Rate of Interest");
      let Result=(pamt*roi)/100;
-     document.write("<Table>");
+     document.write("<Table align='center'>");
      document.write("<tr> <td> Principal Amount </td> <td> Rate Of Interest </td> <td> Total Amount </td> </tr>");
      document.write("<tr> <td>" + pamt + "</td> <td>" + roi + "</td> <td>" + Result + "</td> </tr>");
      document.write("</Table>");
     </script>
+
+
+    <!-- <table border="2px" align="center">
+        <tr>
+            <td>Principal Amount</td>
+            <td>Rate of interest</td>
+            <td>Result</td>
+        </tr>
+        <script>
+            let pamt = prompt("Enter the principal amount");
+            let roi = prompt("Enter the Rate of Interest");
+            let Result = (pamt * roi) / 100;
+            document.write("<tr> <td>" + pamt + "</td> <td>" + roi + "</td> <td>" + Result + "</td> </tr>");
+        </script>
+    </table> -->
 </body>
+
 </html>
